--- a/templates/aistudio_gemini_prompt_freeform.ipynb
+++ b/templates/aistudio_gemini_prompt_freeform.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/AyaAhmed72/Assign/blob/main/templates/aistudio_gemini_prompt_freeform.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Tce3stUlHN0L"
       },
       "source": [
@@ -544,12 +534,12 @@
         "print(response.text)\n"
       ],
       "metadata": {
-        "id": "GIGS7I6tv6Wz",
-        "outputId": "23172db9-ba29-4040-de18-0e9a7bf5e4b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 384
-        }
+        },
+        "id": "GIGS7I6tv6Wz",
+        "outputId": "23172db9-ba29-4040-de18-0e9a7bf5e4b3"
       },
       "execution_count": 9,
       "outputs": [
@@ -594,12 +584,12 @@
         "print(f\"Completed upload: {video_file.uri}\")"
       ],
       "metadata": {
-        "id": "_DUpTAx0w190",
-        "outputId": "d83e9c84-aa19-473c-81c7-f67b82a85b6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "id": "_DUpTAx0w190",
+        "outputId": "d83e9c84-aa19-473c-81c7-f67b82a85b6c"
       },
       "execution_count": 10,
       "outputs": [
@@ -662,12 +652,12 @@
         "print(response.text)"
       ],
       "metadata": {
-        "id": "9UCbv5btxGi9",
-        "outputId": "b92dfca7-a363-4245-cbf8-b76f1b0aac16",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "9UCbv5btxGi9",
+        "outputId": "b92dfca7-a363-4245-cbf8-b76f1b0aac16"
       },
       "execution_count": 13,
       "outputs": [
@@ -793,12 +783,12 @@
         "        print(f\"An error occurred while processing '{video_file_name}': {str(e)}\")\n"
       ],
       "metadata": {
-        "id": "3zZLitiZyJTH",
-        "outputId": "6f29ca25-c502-43ab-c3f6-da9ec45f6841",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "3zZLitiZyJTH",
+        "outputId": "6f29ca25-c502-43ab-c3f6-da9ec45f6841"
       },
       "execution_count": 14,
       "outputs": [
@@ -932,8 +922,7 @@
         "Tce3stUlHN0L"
       ],
       "name": "aistudio_gemini_prompt_freeform.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
