--- a/notebooks/train-yolov12-object-detection-model.ipynb
+++ b/notebooks/train-yolov12-object-detection-model.ipynb
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "OFc4HsSbOzKp"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -77,34 +77,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HyOMtQVRjqae",
-        "outputId": "53ea49e9-eebe-424a-d4f3-4dbf2201f1bf"
+        "outputId": "ee7199ea-d19f-42eb-fbc9-c52e3e5a2a67"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Wed Feb 19 17:03:19 2025       \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
-            "|-----------------------------------------+------------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                        |               MIG M. |\n",
-            "|=========================================+========================+======================|\n",
-            "|   0  NVIDIA L4                      Off |   00000000:00:03.0 Off |                    0 |\n",
-            "| N/A   42C    P8             12W /   72W |       0MiB /  23034MiB |      0%      Default |\n",
-            "|                                         |                        |                  N/A |\n",
-            "+-----------------------------------------+------------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                              |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-            "|        ID   ID                                                               Usage      |\n",
-            "|=========================================================================================|\n",
-            "|  No running processes found                                                             |\n",
-            "+-----------------------------------------------------------------------------------------+\n"
+            "/bin/bash: line 1: nvidia-smi: command not found\n"
           ]
         }
       ]
@@ -328,10 +309,45 @@
         "dataset = download_dataset('https://universe.roboflow.com/w-oxnts/chitr/dataset/1', 'yolov8')"
       ],
       "metadata": {
-        "id": "bUzsIPm4PFX2"
+        "id": "bUzsIPm4PFX2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "11e928b2-6ac6-4076-b631-396fa67c696f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "loading Roboflow workspace...\n",
+            "loading Roboflow project...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Downloading Dataset Version Zip in chitr-1 to yolov8:: 100%|██████████| 2242321/2242321 [00:39<00:00, 56739.04it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n",
+            "Extracting Dataset Version Zip to chitr-1 in yolov8:: 100%|██████████| 19994/19994 [00:17<00:00, 1118.26it/s]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -340,12 +356,12 @@
       ],
       "metadata": {
         "id": "hF2MEZqXPYVH",
-        "outputId": "465bb4fa-de95-4304-d529-a0358b7fe6b4",
+        "outputId": "65cdd466-cb2d-4692-d021-bd513adbb030",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +393,7 @@
       "metadata": {
         "id": "E12mt8bePjpe"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -387,30 +403,60 @@
       ],
       "metadata": {
         "id": "t1UqrEXZQhW7",
-        "outputId": "7797388f-ba92-495e-f112-2de058d4f11f",
+        "outputId": "0d60a831-52c2-4a66-8053-814d08956894",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "names:\n",
-            "- GND\n",
-            "- IDC\n",
-            "- IDC_I\n",
-            "- R\n",
-            "- VDC\n",
-            "- VDC_I\n",
-            "nc: 6\n",
+            "- Dettol_Lemon_Fresh_400ML\n",
+            "- Dettol_Lemon_Fresh_750ML\n",
+            "- Exo_Super_Gel_Ginger_225G\n",
+            "- Giffy_Active_Salt_And_Lemon_Gel_2L\n",
+            "- Giffy_Concentrated_Lemon_500ml\n",
+            "- Giffy_Concentrated_Lime_900ml\n",
+            "- Giffy_Dishwash_Gel_Turbo_Boosters_Pouch\n",
+            "- Giffy_Dishwash_Gel_Yardley_London\n",
+            "- Nimeasy_Neem_Extracts_Lemon_Citrus_250ML\n",
+            "- Nimeasy_Neem_Extracts_Lemon_Citrus_500ML\n",
+            "- Nimeasy_Refill_ValuePack\n",
+            "- Pril_Active_Lime_Grease_Fighter_225ML\n",
+            "- Pril_Active_Lime_Grease_Fighter_425ML\n",
+            "- Pril_Active_Lime_Grease_Fighter_500ML\n",
+            "- Pril_Active_Lime_Grease_Fighter_750ML\n",
+            "- Pril_Active_Lime_Grease_Fighter_Pouch_140ML\n",
+            "- Pril_Dishwash_Lime_3L_Pack\n",
+            "- Pril_Dishwash_Lime_Refill_1500ML\n",
+            "- Pril_Dishwash_Lime_Refill_2L\n",
+            "- Pril_Dishwash_Lime_Refill_850ML\n",
+            "- Pril_Dishwash_Liquid_Kraft_Mint_425ML\n",
+            "- Pril_Dishwash_Liquid_Kraft_Mint_750ML\n",
+            "- Pril_Dishwash_Liquid_Tamarind_225ML\n",
+            "- Pril_Dishwash_Liquid_Tamarind_2L\n",
+            "- Pril_Dishwash_Liquid_Tamarind_425ML\n",
+            "- Pril_Dishwash_Liquid_Tamarind_750ml\n",
+            "- Pril_Lime_Dish_Wash_140ML\n",
+            "- Pril_Tamarind_Trial_Pack_100ML\n",
+            "- Scrubz_Lemon_Fighters_500ML\n",
+            "- Scrubz_Lime_Fighters_500ML\n",
+            "- Vim_Dishwash_Liquid_Tropical_Lemon_Freshness_250ML_Pet\n",
+            "- Vim_Dishwash_Liquid_Tropical_Lemon_Freshness_Refill_20RS\n",
+            "- Vim_Dishwash_Liquid_Tropical_Lemon_Freshness_Refill_2L\n",
+            "- Vim_Dishwash_Liquid_Tropical_Lemon_Freshness_Refill_750ML\n",
+            "- Vim_Dishwash_Liquid_Tropical_Lemon_Freshness_Refill_900ML\n",
+            "- Vow_Dishwash_Liquid_Lemon_3_IN_1_850ML_Refill\n",
+            "nc: 36\n",
             "roboflow:\n",
             "  license: CC BY 4.0\n",
-            "  project: circuit-voltages\n",
-            "  url: https://universe.roboflow.com/roboflow-100/circuit-voltages/dataset/2\n",
-            "  version: 2\n",
+            "  project: chitr\n",
+            "  url: https://universe.roboflow.com/w-oxnts/chitr/dataset/1\n",
+            "  version: 1\n",
             "test: ../test/images\n",
             "train: ../train/images\n",
             "val: ../valid/images\n"
@@ -438,13 +484,37 @@
         "\n",
         "model = YOLO('yolov12s.yaml')\n",
         "\n",
-        "results = model.train(data=f'{dataset.location}/data.yaml', epochs=100)"
+        "results = model.train(data=f'{dataset.location}/data.yaml', epochs=5)"
       ],
       "metadata": {
-        "id": "3YBjWLSSQ_n1"
+        "id": "3YBjWLSSQ_n1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 201
+        },
+        "outputId": "d8a001e1-0791-4711-acce-04c9e3c4e233"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "FlashAttention is not available on this device. Using scaled_dot_product_attention instead.\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'dataset' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-2bb39dd186aa>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mYOLO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'yolov12s.yaml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34mf'{dataset.location}/data.yaml'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
